# BuilderInCpp

./: CMakeLists.txt  Director.cpp  Director.h  main.cpp
builders/: FermatNumbers.cpp  FermatNumbers.h  PrimeNumbers.cpp  PrimeNumbers.h  PrimeQuadruplet.cpp  PrimeQuadruplet.h  TwinsPrimeNumbers.cpp  TwinsPrimeNumbers.h  builder.h
